[package]
name = "llm-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.21", features = ["derive"] }
console = "0.15.7"
dialoguer = "0.10.4"
llm = { git = "https://github.com/rustformers/llm.git", branch = "main", features = ["metal"] }
rand = "0.8.5"
